[package]
name = "denken"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
daemonize = "0.5.0"
nix = { version = "0.27.1", features = ["process", "signal"] }
